dataset formatting fixed

--- a/frontend/dataset.html
+++ b/frontend/dataset.html
@@ -113,13 +113,11 @@
 						<div class="table-head">
 							<div class="serial">#</div>
 							<div class="country">Title</div>
-							<div class="visit">Format</div>
 							<div class="percentage">Link</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
 							<div class="country">Root Differentially Expressed Genes</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/Root_DEGs.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -127,7 +125,6 @@
 						<div class="table-row">
 							<div class="serial">02</div>
 							<div class="country">Shoot Differentially Expressed Genes</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/Shoot_DEGs.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -143,21 +140,18 @@
 						<div class="table-head">
 							<div class="serial">#</div>
 							<div class="country">Abiotic Stress</div>
-							<div class="visit">Format</div>
 							<div class="percentage">Link</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
 							<div class="country">Global HRR</div>
-							<div class="visit">CSV</div>
 							<div >
-								<a href="./data/ROOT/root_HRR_100.txt" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
+								<a href="./data/ROOT/root_HRR_100.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">02</div>
 							<div class="country">Cold</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/cold_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -165,7 +159,6 @@
 						<div class="table-row">
 							<div class="serial">03</div>
 							<div class="country">Drought</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/drought_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -173,7 +166,6 @@
 						<div class="table-row">
 							<div class="serial">04</div>
 							<div class="country">Flood</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/flood_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -181,7 +173,6 @@
 						<div class="table-row">
 							<div class="serial">05</div>
 							<div class="country">Osmosis</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/osmo_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -189,7 +180,6 @@
 						<div class="table-row">
 							<div class="serial">06</div>
 							<div class="country">ABA</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/ABA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -197,7 +187,6 @@
 						<div class="table-row">
 							<div class="serial">07</div>
 							<div class="country">JA</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/ROOT/JA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -213,21 +202,18 @@
 						<div class="table-head">
 							<div class="serial">#</div>
 							<div class="country">Abiotic Stress</div>
-							<div class="visit">Format</div>
 							<div class="percentage">Link</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
 							<div class="country">Global HRR</div>
-							<div class="visit">CSV</div>
 							<div >
-								<a href="./data/SHOOT/shoot_HRR_100.txt" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
+								<a href="./data/SHOOT/shoot_HRR_100.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
 							<div class="serial">02</div>
 							<div class="country">Cold</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/cold_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -235,7 +221,6 @@
 						<div class="table-row">
 							<div class="serial">03</div>
 							<div class="country">Drought</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/drought_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -243,7 +228,6 @@
 						<div class="table-row">
 							<div class="serial">04</div>
 							<div class="country">Flood</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/flood_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -251,7 +235,6 @@
 						<div class="table-row">
 							<div class="serial">05</div>
 							<div class="country">Osmosis</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/osmo_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -259,7 +242,6 @@
 						<div class="table-row">
 							<div class="serial">06</div>
 							<div class="country">ABA</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/ABA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
@@ -267,7 +249,6 @@
 						<div class="table-row">
 							<div class="serial">07</div>
 							<div class="country">JA</div>
-							<div class="visit">CSV</div>
 							<div >
 								<a href="./data/SHOOT/JA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
