--- a/frontend/dataset.html
+++ b/frontend/dataset.html
@@ -107,7 +107,7 @@
 	<div class="whole-wrap">
 		<div class="container box_1170">
 			<div class="section-top-border">
-				<h3 class="mb-30">Fold Change and p-value of DEGs</h3>
+				<h3 class="mb-30">Fold Change and p-value of DEGs (CSV format)</h3>
 				<div class="progress-table-wrap">
 					<div class="progress-table">
 						<div class="table-head">
@@ -134,7 +134,7 @@
 				<br>
 				<br>
 
-				<h3 class="mb-30">Node list for Root Tissue</h3>
+				<h3 class="mb-30">Node list for Root Tissue (CSV Format)</h3>
 				<div class="progress-table-wrap">
 					<div class="progress-table">
 						<div class="table-head">
@@ -144,48 +144,41 @@
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
-							<div class="country">Global HRR</div>
-							<div >
-								<a href="./data/ROOT/root_HRR_100.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
-							</div>
-						</div>
-						<div class="table-row">
-							<div class="serial">02</div>
 							<div class="country">Cold</div>
 							<div >
 								<a href="./data/ROOT/cold_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">03</div>
+							<div class="serial">02</div>
 							<div class="country">Drought</div>
 							<div >
 								<a href="./data/ROOT/drought_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">04</div>
+							<div class="serial">03</div>
 							<div class="country">Flood</div>
 							<div >
 								<a href="./data/ROOT/flood_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">05</div>
+							<div class="serial">04</div>
 							<div class="country">Osmosis</div>
 							<div >
 								<a href="./data/ROOT/osmo_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">06</div>
+							<div class="serial">05</div>
 							<div class="country">ABA</div>
 							<div >
 								<a href="./data/ROOT/ABA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">07</div>
+							<div class="serial">06</div>
 							<div class="country">JA</div>
 							<div >
 								<a href="./data/ROOT/JA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
@@ -196,7 +189,7 @@
 				<br>
 				<br>
 
-				<h3 class="mb-30">Node list for Shoot Tissue</h3>
+				<h3 class="mb-30">Node list for Shoot Tissue (CSV Format)</h3>
 				<div class="progress-table-wrap">
 					<div class="progress-table">
 						<div class="table-head">
@@ -206,51 +199,71 @@
 						</div>
 						<div class="table-row">
 							<div class="serial">01</div>
-							<div class="country">Global HRR</div>
-							<div >
-								<a href="./data/SHOOT/shoot_HRR_100.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
-							</div>
-						</div>
-						<div class="table-row">
-							<div class="serial">02</div>
 							<div class="country">Cold</div>
 							<div >
 								<a href="./data/SHOOT/cold_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">03</div>
+							<div class="serial">02</div>
 							<div class="country">Drought</div>
 							<div >
 								<a href="./data/SHOOT/drought_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">04</div>
+							<div class="serial">03</div>
 							<div class="country">Flood</div>
 							<div >
 								<a href="./data/SHOOT/flood_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">05</div>
+							<div class="serial">04</div>
 							<div class="country">Osmosis</div>
 							<div >
 								<a href="./data/SHOOT/osmo_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">06</div>
+							<div class="serial">05</div>
 							<div class="country">ABA</div>
 							<div >
 								<a href="./data/SHOOT/ABA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 						<div class="table-row">
-							<div class="serial">07</div>
+							<div class="serial">06</div>
 							<div class="country">JA</div>
 							<div >
 								<a href="./data/SHOOT/JA_full.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<br>
+				<br>
+
+				<h3 class="mb-30">Edge lists (CSV Format)</h3>
+				<div class="progress-table-wrap">
+					<div class="progress-table">
+						<div class="table-head">
+							<div class="serial">#</div>
+							<div class="country">Tissue</div>
+							<div class="percentage">Link</div>
+						</div>
+						<div class="table-row">
+							<div class="serial">01</div>
+							<div class="country">Root Global HRR</div>
+							<div >
+								<a href="./data/ROOT/root_HRR_100.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
+							</div>
+						</div>
+						<div class="table-row">
+							<div class="serial">02</div>
+							<div class="country">Shoot Global HRR</div>
+							<div >
+								<a href="./data/SHOOT/shoot_HRR_100.csv" class="genric-btn link" style="margin-left: -35px;">Click Here to Download!</a>
 							</div>
 						</div>
 					</div>
