--- a/frontend/query.html
+++ b/frontend/query.html
@@ -97,7 +97,8 @@
 	<section class="sample-text-area">
 		<div class="container" id="network-viewer">
 				<p>
-                	Submit RAP ID of genes to be queried and select appropriate tissue and stress/hormone treatments.
+                	Submit RAPDB Gene IDs of Rice genes or Ensemble Stable Gene IDs of other crops to be queried 
+					and select appropriate tissue and stress/hormone treatments.
 				</p>
 				<br>
 				<div>
