--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -126,7 +126,12 @@
 			</p>
 			</div>
 			<div id="valid">
-				<p> A total of <span id ="numvalid"></span> genes among the query genes were found in the corresponding dataset</p>
+				<p> 
+					A total of <span id ="numvalid"></span> genes among the query genes were found in the corresponding dataset
+					<a id="help-validate" data-toggle="tooltip" data-placement="top" title="Help!" target='_blank'>
+						<i class="fa fa-question-circle" aria-hidden="true"></i>
+					</a>
+				</p>
 				  <table class="table table-bordered" style="margin-top:10px;">
 					<thead class="thead-dark" style="background-color:#2f95f5; border-color: #175a99;">
 					  <tr>
@@ -199,7 +204,11 @@
 			<!-- Start Graph Area -->
 			<div>
 				<div id="network-view" style="display: none;">
-					<h2>Network Viewer</h2>
+					<h2>Network Viewer
+						<a id="help-network" data-toggle="tooltip" data-placement="top" title="Help!" target='_blank'>
+							<i class="fa fa-question-circle" aria-hidden="true"></i>
+						</a>
+					</h2>
 					<div class="row" style="margin:0px">
 
 						<!-- Start Network Area -->
@@ -303,6 +312,9 @@
 							<div class="nav nav-tabs" id="nav-tab" role="tablist">
 							  <a class="nav-item nav-link active" id="nav-node-tab" data-toggle="tab" href="#nav-node" role="tab" aria-controls="nav-node" aria-selected="true">Nodes</a>
 							  <a class="nav-item nav-link" id="nav-edge-tab" data-toggle="tab" href="#nav-edge" role="tab" aria-controls="nav-edge" aria-selected="false">Edges</a>
+							  <a id="help-table" data-toggle="tooltip" data-placement="top" title="Help!" target='_blank'>
+								  <i class="fa fa-question-circle" aria-hidden="true"></i>
+							  </a>
 							</div>
 						</nav>
 						<div class="tab-content" id="nav-tabContent">
@@ -440,7 +452,11 @@
 			<!-- Start Expression Area -->
 			<div>
 				<div id="expression-view" style="display: none;">
-					<h4 class="text-heading" style="margin-top: 40px;margin-bottom: -20px; text-align:center">HeatMap - Fold-Change</h4>
+					<h4 class="text-heading" style="margin-top: 40px;margin-bottom: -20px; text-align:center">HeatMap - Fold-Change
+						<a id="help-expression" data-toggle="tooltip" data-placement="top" title="Help!" target='_blank'>
+							<i class="fa fa-question-circle" aria-hidden="true"></i>
+						</a>
+					</h4>
 					<div id='expressionchart'></div>
 					<div id='expressionopts'></div>
 
@@ -528,7 +544,11 @@
 <script src="./assets/js/load_mapping_table.js"></script>
 
 <script>
-	document.getElementById('help-options').setAttribute('href', deployment_url+'tutorial.pdf#4%2E2%2E%20Options')
+	document.getElementById('help-options').setAttribute('href', deployment_url+'tutorial.pdf#4%2E2%2E%20Options');
+	document.getElementById('help-validate').setAttribute('href', deployment_url+'tutorial.pdf#3%2E2%2E%20Validation%20Page');
+	document.getElementById('help-network').setAttribute('href', deployment_url+'tutorial.pdf#4%2E%20Network%20Viewers');
+	document.getElementById('help-expression').setAttribute('href', deployment_url+'tutorial.pdf#5%2E%20Expression%20Viewer');
+	document.getElementById('help-table').setAttribute('href', deployment_url+'tutorial.pdf#4%2E3%2E%20Table');
 	var query = QueryStringToJSON();
 	$(".sample-text-area").hide();
 	$.ajax({
