hyperlinks with page numbers

--- a/frontend/condition.html
+++ b/frontend/condition.html
@@ -245,7 +245,7 @@
 		
 	<!-- Personalised Scripts -->
 	<script type="text/javascript">
-		document.getElementById('help-condition').setAttribute('href', deployment_url+'tutorial.pdf#6%2E2%2E%20Condition%20Wise');
+		document.getElementById('help-condition').setAttribute('href', deployment_url+'tutorial.pdf#page=14');
 		document.getElementById('conditionForm').action = deployment_url+'load';
 		// this is the id of the form
 		$("#conditionForm").submit(function(e) {
