--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -544,11 +544,11 @@
 <script src="./assets/js/load_mapping_table.js"></script>
 
 <script>
-	document.getElementById('help-options').setAttribute('href', deployment_url+'tutorial.pdf#4%2E2%2E%20Options');
-	document.getElementById('help-validate').setAttribute('href', deployment_url+'tutorial.pdf#3%2E2%2E%20Validation%20Page');
-	document.getElementById('help-network').setAttribute('href', deployment_url+'tutorial.pdf#4%2E%20Network%20Viewers');
-	document.getElementById('help-expression').setAttribute('href', deployment_url+'tutorial.pdf#5%2E%20Expression%20Viewer');
-	document.getElementById('help-table').setAttribute('href', deployment_url+'tutorial.pdf#4%2E3%2E%20Table');
+	document.getElementById('help-options').setAttribute('href', deployment_url+'tutorial.pdf#page=11');
+	document.getElementById('help-validate').setAttribute('href', deployment_url+'tutorial.pdf#page=6');
+	document.getElementById('help-network').setAttribute('href', deployment_url+'tutorial.pdf#page=8');
+	document.getElementById('help-expression').setAttribute('href', deployment_url+'tutorial.pdf#page=13');
+	document.getElementById('help-table').setAttribute('href', deployment_url+'tutorial.pdf#page=12');
 	var query = QueryStringToJSON();
 	$(".sample-text-area").hide();
 	$.ajax({
