--- a/frontend/module.html
+++ b/frontend/module.html
@@ -271,7 +271,7 @@
 		
 	<!-- Personalised Scripts -->
 	<script type="text/javascript">
-		document.getElementById('help-module').setAttribute('href', deployment_url+'tutorial.pdf#6%2E1%2E%20Module%20Wise');
+		document.getElementById('help-module').setAttribute('href', deployment_url+'tutorial.pdf#page=14');
 		document.getElementById('moduleForm').action = deployment_url+'module';
 		var graph;
 
