--- a/frontend/pathway.html
+++ b/frontend/pathway.html
@@ -239,7 +239,7 @@
 		
 	<!-- Personalised Scripts -->
 	<script type="text/javascript">
-		document.getElementById('help-pathway').setAttribute('href', deployment_url+'tutorial.pdf#6%2E3%2E%20Pathway%20Wise');
+		document.getElementById('help-pathway').setAttribute('href', deployment_url+'tutorial.pdf#page=14');
 		document.getElementById('conditionForm').action = deployment_url+'pathway';
 		
 		$("#pathwayForm").submit(function(e) {
