--- a/frontend/query.html
+++ b/frontend/query.html
@@ -234,7 +234,7 @@
 		<!-- Personalised Scripts -->
 		<script type="text/javascript">
 			document.getElementById('query-form').action = deployment_url+'validate.html';
-			document.getElementById('help-query').setAttribute('href', deployment_url+'tutorial.pdf#3%2E1%2E%20Query%20Form')
+			document.getElementById('help-query').setAttribute('href', deployment_url+'tutorial.pdf#page=5')
 			$("#query-form").submit(function(e) {
 				var text = $('textarea#genes').val();
   				var genes = text.split(/[ ,+\s]/).filter(Boolean);
