added node description

--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -299,9 +299,10 @@
 								<br>
 
 								<div>
-									<!-- <h3 style="color:white; text-decoration: underline;">Description</h3> -->
-									<!-- <p style="font-weight: bold;">Color</p> -->
-									<p id="color-text">Node colour grading is proportional to its degree</p>
+									<ul class="unordered-list" style="border:white;background: transparent;">
+										<li><p id="color-text" style="color:white">Node colour grading is proportional to its degree</p></li>
+										<li><p style="color:white">Triangular Nodes represent Transcription Factor</p></li>
+									</ul>
 								</div>
 								
 								<div class="button-group-area mt-40">
@@ -412,10 +413,17 @@
 									<br>
 									<br>
 
-									<div>
+									<!-- <div> -->
 										<!-- <h3 style="color:white; text-decoration: underline;">Description</h3> -->
 										<!-- <p style="font-weight: bold;">Color</p> -->
-										<p id="color-textN">Node colour grading is proportional to its degree</p>
+										<!-- <p id="color-textN">Node colour grading is proportional to its degree</p> -->
+									<!-- </div> -->
+									<div>
+										<ul class="unordered-list" style="border:white;background: transparent;">
+											<li><p id="color-textN" style="color:white">Node colour grading is proportional to its degree</p></li>
+											<li><p style="color:white">Triangular Nodes represent Transcription Factor</p></li>
+											<li><p style="color:white">Green-Bordered Nodes represent Query Genes</p></li>
+										</ul>
 									</div>
 									
 									<div class="button-group-area mt-40">
