--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,9 +59,9 @@
                                         <li class="active"><a href="index.html">Home</a></li>
                                         <li><a>Browse</a>
                                             <ul class="submenu">
-                                                <li><a href="module.html">Module Wise</a></li>
-                                                <li><a href="condition.html">Condition Wise</a></li>
-                                                <li><a href="pathway.html">Pathway Wise</a></li>
+                                                <li><a href="module.html">Module-Wise</a></li>
+                                                <li><a href="condition.html">Condition-Wise</a></li>
+                                                <li><a href="pathway.html">Pathway-Wise</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
