--- a/frontend/pathway.html
+++ b/frontend/pathway.html
@@ -77,9 +77,9 @@
                                         <li><a href="query.html">Query</a>
                                         <li class="active"><a>Browse</a>
                                             <ul class="submenu">
-                                                <li><a href="module.html">Module Wise</a></li>
-                                                <li><a href="condition.html">Condition Wise</a></li>
-                                                <li><a href="pathway.html">Pathway Wise</a></li>
+                                                <li><a href="module.html">Module-Wise</a></li>
+                                                <li><a href="condition.html">Condition-Wise</a></li>
+                                                <li><a href="pathway.html">Pathway-Wise</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
@@ -110,7 +110,7 @@
 	<!-- Start Sample Area -->
 	<section class="sample-text-area">
 		<div class="container box_1170 border-top-generic">
-			<h3 class="text-heading">Pathway Browse</h3>
+			<h3 class="text-heading">Browse Pathway-wise</h3>
 				<p class="sample-text">
 					Allows the user to analyze the genes of selected pathway 
 					and their expression in chosen tissue and stress/treatment condition.
@@ -165,7 +165,7 @@
 			</div>
 
 			<div class="container box_1170" id="loading-image" style="display: none;">
-				<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched. It'll take less than a minute...</p>
+				<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched...</p>
 			</div>
 
 			
