--- a/frontend/condition.html
+++ b/frontend/condition.html
@@ -76,9 +76,9 @@
                                         <li><a href="query.html">Query</a>
                                         <li class="active"><a>Browse</a>
                                             <ul class="submenu">
-                                                <li><a href="module.html">Module Wise</a></li>
-                                                <li><a href="condition.html">Condition Wise</a></li>
-                                                <li><a href="pathway.html">Pathway Wise</a></li>
+                                                <li><a href="module.html">Module-Wise</a></li>
+                                                <li><a href="condition.html">Condition-Wise</a></li>
+                                                <li><a href="pathway.html">Pathway-Wise</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
@@ -164,7 +164,7 @@
 			</div>
 
 			<div class="container box_1170" id="loading-image" style="display: none;">
-				<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched. It'll take less than a minute...</p>
+				<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched...</p>
 			</div>
 			
 			<!-- Start Table -->
