--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -77,9 +77,9 @@
                                         <li class="active"><a href="query.html">Query</a>
                                         <li><a>Browse</a>
                                             <ul class="submenu">
-                                                <li><a href="module.html">Module Wise</a></li>
-                                                <li><a href="condition.html">Condition Wise</a></li>
-                                                <li><a href="pathway.html">Pathway Wise</a></li>
+                                                <li><a href="module.html">Module-Wise</a></li>
+                                                <li><a href="condition.html">Condition-Wise</a></li>
+                                                <li><a href="pathway.html">Pathway-Wise</a></li>
                                             </ul>
                                         </li>
                                         <li><a href="dataset.html">Datasets</a></li>
@@ -105,7 +105,7 @@
 	<!-- Slider Area End-->
 
 	<div class="container box_1170" id="loading-image">
-	<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched. It'll take less than a minute...</p>
+	<img src="assets/loading.gif" style="width: 70px;"><p>Please wait while data is being fetched...</p>
 	</div>
 
 	<!-- Start Validate Area -->
