--- a/frontend/module.html
+++ b/frontend/module.html
@@ -112,10 +112,10 @@
 		<div class="container box_1170" id="module-viewer">
 			<h3 class="text-heading">Browse Module-wise</h3>
 				<p class="sample-text">
-					Click “Module viewer” to view top 100 highly connected genes based on their within-module 
-					connectivity. In this view, the size of the nodes correspond to its degree connectivity 
-					while the colour represents the module colour. The table lists the node and edge attributes
-					and function GO enrichment of these genes.
+					Click “Module viewer” to view top 100 highly connected genes based on their within-module connectivity. 
+					In this view, the size of the node corresponds to its degree (i.e. connectivity) while the colour 
+					represents the module colour. Table below lists the node and edge attributes and GO enrichment of 
+					these genes.
 					<a id="help-module" data-toggle="tooltip" data-placement="top" title="Help!" target='_blank'>
 						<i class="fa fa-question-circle" aria-hidden="true"></i>
 					</a>
