--- a/frontend/pathway.html
+++ b/frontend/pathway.html
@@ -112,8 +112,8 @@
 		<div class="container box_1170 border-top-generic">
 			<h3 class="text-heading">Browse Pathway-wise</h3>
 				<p class="sample-text">
-					Allows the user to analyze the genes of selected pathway 
-					and their expression in chosen tissue and stress/treatment condition.
+					Allows the user to select genes of a particular KEGG pathway(s) from drop-down menu 
+					(max 300) and analyse their expression in chosen tissue and stress/treatment condition.
 					<a id="help-pathway" data-toggle="tooltip" data-placement="top" title="Help!" target='_blank'>
 						<i class="fa fa-question-circle" aria-hidden="true"></i>
 					</a>
@@ -172,9 +172,10 @@
 			<div class="row" id="pathway_options" style="display: none;">
 				<div>
 					<p>
-						The list below displays all the genes, with respect to the selected tissue and stress/hormone treatment, 
-						clubbed according to the different KEGG pathways. One may select upto 300 genes and submit them to 
-						visualize their relationship from the application's viewers.
+						Select pathway(s) from the list below – click on’+’ sign to expand sub-categories of 
+						pathways. Genes of the selected pathways are listed on the right panel. Select up to 
+						300 genes and submit to visualize their relationship in the chosen tissue and stress/hormone 
+						treatment.
 					</p>
 				</div>
 				<form class="form-contact" id="pathwayForm" style="width: 2500px;">
