--- a/frontend/validate.html
+++ b/frontend/validate.html
@@ -301,7 +301,7 @@
 								<div>
 									<ul class="unordered-list" style="border:white;background: transparent;">
 										<li><p id="color-text" style="color:white">Node colour grading is proportional to its degree</p></li>
-										<li><p style="color:white">Triangular Nodes represent Transcription Factor</p></li>
+										<li><p style="color:white">Triangular Nodes: TFs</p></li>
 									</ul>
 								</div>
 								
@@ -421,8 +421,8 @@
 									<div>
 										<ul class="unordered-list" style="border:white;background: transparent;">
 											<li><p id="color-textN" style="color:white">Node colour grading is proportional to its degree</p></li>
-											<li><p style="color:white">Triangular Nodes represent Transcription Factor</p></li>
-											<li><p style="color:white">Green-Bordered Nodes represent Query Genes</p></li>
+											<li><p style="color:white">Triangular Nodes: TFs</p></li>
+											<li><p style="color:white">Green-encircled Nodes: Query Genes</p></li>
 										</ul>
 									</div>
 									
